--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             </p>
           </div>
           <ul>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
+            <li><button class="scale">1</button></li>
+            <li><button class="scale">2</button></li>
+            <li><button class="scale">3</button></li>
+            <li><button class="scale">4</button></li>
+            <li><button class="scale">5</button></li>
           </ul>
-          <button type="submit">Submit</button>
+          <button type="submit" id="submit">Submit</button>
     </section>
     <!-- Rating state end -->
     <!-- Thank you state start -->
@@ -43,7 +43,7 @@
       <div class="thanks-image">
         <img src="./images/illustration-thank-you.svg" alt="thanks-image">
       </div>
-      <p id="rated"><span>You selected <!-- Add rating here --> out of 5</apan></p>
+      <p id="rated"><span>You selected <!-- Add rating here --> out of 5</span></p>
       <h2>Thank you!</h2>
       <p>
         We appreciate you taking the time to give a rating. If you ever need more support,
